# chatty

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  README.en.md  README.md  biome.json  chatty.code-workspace  eslint.config.js  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  eval.yml  release.yml
.scratch/chatty-agent-mvp-simplification/: spec.md
apps/api/: package.json  tsup.config.ts
apps/web/: .prettierignore  components.json  eslint.config.mjs  index.html  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vite.config.ts
data/: forbidden_words.json  knowledge_documents.jsonl  marketing_templates.json  products.jsonl  user_profiles.jsonl
docs/: agentic-customer-service-prd.md  agentic-search-design.md  architecture.md  benchmark.md  changelog.md  chatty-sdk-usage-audit.md  code-walkthrough.md  current-architecture.md  design.md  development-method.md  interview-guide.md  jd.md  loop-engineering-plan.md  open-source-adoption.md  project-plan.md  resume-template.md  tech-stack-decisions.md
docs/adr/: 0001-architecture-reference-claude-code.md  0002-model-directed-task-scheduling.md  0003-local-first-agent-mvp.md  0004-repeat-customer-memory.md  0005-python-agents-sdk-runtime.md  0006-explicit-customer-memory.md  0007-single-context-eval-and-project-boundary.md  0008-final-platform-contraction.md  0009-thin-react-vite-web.md  0010-incremental-typescript-runtime-migration.md  0011-nextjs-shadcn-web.md  0012-nextjs-agent-runtime.md  0013-agent-research-content-workbench.md  0014-python-fastapi-runtime-vite-web.md  0015-narrow-tools-carry-harness-invariants.md
docs/agents/: domain.md
docs/archive/: agentic-customer-service-prd.md  agentic-search-design.md  architecture.md  loop-engineering-plan.md  open-source-adoption.md  qa-template-guide.md
docs/research/: intent-routing-model-vs-harness.md  skills-as-agent-capabilities.md
eval/: cases.jsonl  deadline.test.ts  deadline.ts  judge.ts  run.ts  tsconfig.json
eval/golden/: README.md  all-in-one.yaml  current-link.yaml  deposit-cleaning.yaml  generic-intent.yaml  happy-path.yaml  memory-recall-empty.yaml  no-extra-questions.yaml  order-mode-ambiguity.yaml  post-order-delivery.yaml  price-question.yaml  rental-howto.yaml  rental-period-provide.yaml  repair.yaml  (+4 more)
knowledge/: records.jsonl
rag-service/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  package-lock.json  package.json
scripts/: fullstack-integration.mts  package-release.mts  promote-failure-case.mts  smoke.mts  worker-integration.mts  worker.mts
tests/: __init__.py  browser_smoke_app.py  conftest.py  test_agent.py  test_agent_failures.py  test_app.py  test_artifacts.py  test_backup.py  test_browser_smoke.py  test_catalog.py  test_commerce.py  test_config.py  test_contracts.py  test_database.py  test_deepseek_contract.py  test_demo_data.py  test_env.py  test_eval.py  test_experiments.py  test_harness.py  test_integrated_slices.py  test_knowledge.py  test_memory.py  test_order_tools.py  test_project_docs.py  test_run.py  test_server.py  test_session.py  test_smoke.py  test_sqlite.py  test_store.py  test_support.py  test_tools.py  test_trace_dashboard.py  test_traces.py  test_tracing.py
web/: components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
(+260 files in other folders)
