[project]
name = "chatty-agent"
version = "0.1.0"
description = "A single-agent e-commerce recommendation and marketing demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.139.2",
  "openai-agents>=0.18.3",
  "pydantic>=2.13.4",
  "python-dotenv>=1.2.2",
  "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
  "httpx2>=2.7.0",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.22",
  "ty>=0.0.62",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["chatty"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "main.py"]
